feat: add topic list method & update api doc
